fix bug with href footer and z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@
 .header {
     position: fixed;
     min-width: 250px;
+    z-index: 20;
 
     .boxgrey {
         z-index: -1;
@@ -143,7 +144,7 @@
         width: 100vw;
         z-index: 5;
 
-        div {
+        nav {
             display: flex;
             flex-direction: column;
             align-items: flex-end;
@@ -240,7 +241,6 @@
     flex-direction: column;
     align-items: center;
     background: $grey-bg;
-    z-index: -1;
 
     ul {
         list-style: none;
